--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZenNote AI</title>
+    <meta name="theme-color" content="#0f172a">
+    <link rel="manifest" href="manifest.json">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,9 +14,11 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background: transparent;
+            background: #0f172a;
             margin: 0;
             overflow: hidden;
+            height: 100vh;
+            width: 100vw;
         }
         /* Custom scrollbar for minimalist look */
         ::-webkit-scrollbar {
@@ -26,6 +30,10 @@
         ::-webkit-scrollbar-thumb {
             background: rgba(156, 163, 175, 0.3);
             border-radius: 10px;
+        }
+        #root {
+            height: 100%;
+            width: 100%;
         }
     </style>
 <script type="importmap">
