--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 }
 </script>
 </head>
-<body>
+<body class="bg-transparent">
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
 </body>
